--- a/app/static/css/custom_dashboard.css
+++ b/app/static/css/custom_dashboard.css
@@ -14,6 +14,11 @@
 
 .effect1{
     -webkit-box-shadow: 0 10px 6px -6px #777;
-       -moz-box-shadow: 0 10px 6px -6px #777;
-            box-shadow: 0 10px 6px -6px #777;
+    -moz-box-shadow: 0 10px 6px -6px #777;
+         box-shadow: 0 10px 6px -6px #777;
 }
+
+#logs_table td:last-child{
+  width: 100%;
+}
+
