--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -1,7 +1,23 @@
 {% extends "admin/base_site.html" %}
 {% load i18n static %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/dashboard.css" %}">{% endblock %}
+{% block extrastyle %}
+    {{ block.super }}
+    <link rel="stylesheet" type="text/css" href="{% static "admin/css/dashboard.css" %}">
+    <style type="text/css">
+      #content-related {
+          float:right;
+          width: 100%;
+          position: relative;
+          margin-right: -635px;
+      }
+
+      .colSM #content-related {
+          float: left;
+          margin-right: 0;
+      }
+    </style>
+{% endblock %}
 
 {% block coltype %}colMS{% endblock %}
 
