--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -83,6 +83,10 @@
         </tr>
       </table> 
     </div>
+    <hr>
+    <div class="see-all">
+    <a class="see-all" href="{% url 'admin:airport_statechangelog_changelist' %}">See All</a>
+    </div>
   </div>
 
 
