Added link on dashboard to aircraft list.

--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -29,6 +29,11 @@
       <div class="charts__chart chart--p{{taken_large_percent}} chart--red" data-percent></div><!-- /.charts__chart -->
     </div><!-- /.charts -->
 
+    <hr>
+    <div class="see-all">
+    <a class="see-all" href="{% url 'admin:airport_statechangelog_changelist' %}">All Aircrafts</a>
+    </div>
+
     </div>
   </div>
 
