Added simulator page to ease exercise of api.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,6 +16,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="/">Home</a></li>
+						<li><a href="/simulator">Simulator</a></li>
 					</ul>
 				</nav>
 			</header>
