--- a/app/templates/simulator.html
+++ b/app/templates/simulator.html
@@ -12,7 +12,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1><strong><a href="index.html">Airport Automation</a></strong> - future is here </h1>
+				<h1><strong><a href="/">Airport Automation</a></strong> - future is here </h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="/">Home</a></li>
