Added response code in simulator.

--- a/app/templates/simulator.html
+++ b/app/templates/simulator.html
@@ -55,6 +55,10 @@
     style="border: 1px solid black; float: left;">
   </canvas>
 
+  <div style="float: right; height: 300; width: 50%;text-align: center">
+      <h1 style="font-size: 300%">SERVER RESPONSE CODE:</h1>
+      <h1 id="response_status" style="font-size: 1000%;"></h1>
+  </div>
 
   <div style="clear:both">
   </div>
